[tool.poetry]
name = "pythondeps"
version = "0.1.0"
description = "Containerized python environment"
authors = ["Ali Khan <alik@robarts.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.2"
nibabel = "^3.2.2"
numpy = "^1.22.3"
templateflow = "^0.8.1"
PyPDF2 = "^1.27.12"
nilearn = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
