[tool.poetry]
name = "pythondeps"
version = "0.1.0"
description = "Containerized python environment for zonaconn-smk"
authors = ["Jason Kai <tkai@uwo.ca>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.2"
nibabel = "^4.0.2"
pandas = "^1.5.1"
nilearn = "^0.10.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
